--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:vm="clr-namespace:MoodProgram.ViewModel"
         xmlns:conv="clr-namespace:MoodProgram.Converters"
         mc:Ignorable="d"
-        Title="MainWindow"  Width="450" Height="600" Background="LightGray">
+        Title="MainWindow"  Width="450" Height="600" Background="{Binding CurrentMouth.ExpressionColor}">
     <Window.Resources>
         <conv:PathFigureToCollectionConverter x:Key="PathFigureToCollectionConverter"/>
     </Window.Resources>
@@ -21,9 +21,10 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid Background="{Binding CurrentMouth.ExpressionColor}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <Label Content="{Binding Value}"></Label>
                 <Canvas x:Name="FaceCanvas" Width="200" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <Ellipse Width="40" Height="40" Fill="Black" Canvas.Left="59" Canvas.Top="63"/>
-                    <Ellipse Width="40" Height="40" Fill="Black" Canvas.Left="136" Canvas.Top="63" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    <Ellipse Width="40" Height="40" Fill="Black" Canvas.Left="27" Canvas.Top="60"/>
+                    <Ellipse Width="40" Height="40" Fill="Black" Canvas.Left="100" Canvas.Top="60" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                     <!--<Path Data="M 20 70 Q 50 100 80 70" Stroke="Black" StrokeThickness="3" Canvas.Left="59" Canvas.Top="39" HorizontalAlignment="Center" VerticalAlignment="Top"/> -->
                     <Path Stroke="Black" StrokeThickness="3">
                         <Path.Data>
@@ -34,6 +35,11 @@
             </Grid>
         </Grid>
         <Grid Grid.Row="1" Background="{Binding CurrentMouth.ExpressionColor}">
+            <Label Content="{Binding MoodDescription}"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Margin="10"
+                   FontSize="20"/>
             <Slider  x:Name="ExpressionSlider"
                      Margin="30" 
                      VerticalAlignment="Center" 
